get gradle to half ass though my local lucene